[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.34.4",
    "levenshtein>=0.27.1",
    "llama-cpp-python>=0.3.16",
    "openai>=1.106.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
]
